[package]
name = "scheduler-backing-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.52"
chrono = "0.4.19"
serde_json = "1.0.74"
tokio-stream = "0.1.8"
scheduler = { version = "*", path = "../scheduler" }
log = "0.4.14"
tracing = "0.1.29"
sqlx = { version = "0.5.10", features = ["sqlite", "chrono","runtime-tokio-rustls", "all-types", "migrate"] }
