[package]
name = "scheduler-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.5", features = ["derive", "env"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "time","macros"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
metrics-exporter-prometheus = { version = "0.7.0", optional = true }
metrics-util = "0.10.2"
scheduler = { version = "*", path = "../scheduler" }
scheduler-server-http = { version = "*", path = "../scheduler-server-http" }
scheduler-backing-noop = { version = "*", path = "../scheduler-backing-noop", optional = true }
scheduler-backing-redis = { version = "*", path = "../scheduler-backing-redis", optional = true }
scheduler-backing-sqlite = { version = "*", path = "../scheduler-backing-sqlite", optional = true }
scheduler-backing-dynamodb = { version = "*", path = "../scheduler-backing-dynamodb", optional = true }
scheduler-backing-postgres = { version = "*", path = "../scheduler-backing-postgres", optional = true }

[features]
default = ["scheduler-backing-noop"]
backing-dynamodb = ["scheduler-backing-dynamodb"]
backing-postgres = ["scheduler-backing-postgres"]
backing-redis = ["scheduler-backing-redis"]
backing-sqlite = ["scheduler-backing-sqlite"]
metrics-prometheus = ["metrics-exporter-prometheus"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true