[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.74", features = ["raw_value"] }
async-trait = "0.1.52"
thiserror = "1.0.30"
tokio-stream = "0.1.8"
cron = "0.9.0"
url = { version = "2.2.2", features = ["serde"] }
tokio = { version = "1.15.0", features = ["rt", "sync", "macros"] }
ahash = "0.7.6"
tracing = "0.1.29"
reqwest = { version = "0.11.8", default-features=false, features = ["rustls-tls","gzip", "json"] }
metrics = "0.17.1"